# idf-camera-playground

./: .gitignore  .gitmodules  AUDIO_SYSTEMS_README.md  CLAUDE.md  README.md  activate.sh  build.sh  prepare.sh
components/audio_processing/: CMakeLists.txt  audio_processing.c
components/esp_mesh_audio/: CMakeLists.txt
components/oled_ui/: CMakeLists.txt  README.md  camera_control_ui.c  oled_ui.c  ssd1306_driver.c
docs/: CLAUDE_TEAM_MISSION.md
docs/REACT/: detailed_architecture_guidelines.md  instructions.md  react-guidelines.md
infrastructure/: README.md  docker-compose.yml
infrastructure/mosquitto/: mosquitto.conf
projects/acoustic-shadow-detector/: CMakeLists.txt  README.md  project.json
projects/atmospheric-bass-barometer/: CMakeLists.txt  README.md  project.json
projects/battery_optimizations/: CMakeLists.txt  README.md  project.json  sdkconfig.defaults
projects/burst_cam/: CMakeLists.txt  README.md  project.json
projects/camera_oled_display/: CMakeLists.txt  README.md  project.json  sdkconfig.defaults
projects/camera_oled_ui/: CMakeLists.txt  README.md  build.sh  project.json
projects/hello_wifi/: CMakeLists.txt  README.md  project.json  sdkconfig.defaults
projects/sd_card_tester/main/: CMakeLists.txt  main.c  sd_tester.c  sd_tester.h
projects/time-v1/main/: CMakeLists.txt  audio_capture.c  audio_capture.h  camera_manager.c  camera_manager.h  esp_now_comm.c  esp_now_comm.h  main.c  power_manager.c  power_manager.h  sd_manager.c  sd_manager.h  simple_main.c  stats_engine.c  stats_engine.h  time_v1_main.c  wifi_manager.c  wifi_manager.h
(+102 files in other folders)
